deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fahad
spec:
  selector:
    app: fahad
  ports:
    - name: http
      port: 80
      targetPort: http
